--- a/src/Compo/Center of Excellence/Excell.css
+++ b/src/Compo/Center of Excellence/Excell.css
@@ -50,14 +50,14 @@
     border-radius: 10px;
   }
   .Conttent {
-    width: 85vw;
+    width: 100%;
     margin-inline: 5px;
   }
   .Pic {
     width: 15vw;
   }
   .Pic > img {
-    width: 10vw;
+    width: 15vw;
   }
 }
 
